-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1 , 5.7, 5.8
-
Mac OS X 10.7 10.8; Linux X11
-
5361513ec812c545ca2cedea6c8a30c362cb8e5d 7091be1b7999d93fe2126042161dcd1d8fd20026
Please test with attached example.
Steps to reproduce
1. Move mouse cursor on top of MainWindow and see "Mouse in Window"
2. Press key "1" dialog opens and see "Mouse not in Window"
3. Don't move mouse and press enter to close dialog
4. Dialog is gone, mouse is on top of widget, but text is still "Mouse not in Window" which means QWidget enterEvent() is not called.
Works on Windows 7.
- is replaced by
-
QTBUG-88250 tst_QWindow::modalWindowEnterEventOnHide_QTBUG35109 fails on Windows
-
- In Progress
-
- is required for
-
QTBUG-35145 Issues to be fixed before Qt5.2 final release
-
- Closed
-
- relates to
-
QTCREATORBUG-10539 Weird mouse cursor within main text editor.
-
- Closed
-
- resulted in
-
QTBUG-87392 tst_qwindow tests failing on Android
-
- Reported
-
-
QTBUG-69162 Android: tst_QWindow::modalWindowEnterEventOnHide_QTBUG35109 fails
-
- Reported
-
-
QTBUG-88250 tst_QWindow::modalWindowEnterEventOnHide_QTBUG35109 fails on Windows
-
- In Progress
-
-
QTBUG-72296 Windows: Focus-related tests fail in tst_QWindow
-
- Closed
-
-
QTBUG-66756 tst_QWindow::testInputEvents() failed on Windows 10 (msvc2017-x86)
-
- Closed
-
-
QTBUG-72344 tst_qwindow is failing on Windows
-
- Closed
-
-
QTBUG-53156 tst_QWindow::modalWindowPosition fails in Ubuntu 16.04 qtbase
-
- Closed
-
| For Gerrit Dashboard: QTBUG-35109 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 273482,5 | xcb: delay sending of mouse enter when closing modal dialog | dev | qt/qtbase | Status: NEW | 0 | 0 |